--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "deploy:gh": "ng build --prod --output-path docs --base-href='https://sgiraldog.github.io/angular-project1/' && sudo ngh --dir docs"
   },
   "private": true,
   "dependencies": {
@@ -31,6 +32,7 @@
     "@ngrx/store": "^10.0.1",
     "@ngrx/store-devtools": "^10.0.1",
     "angular-bootstrap-md": "^10.0.0",
+    "angular-cli-ghpages": "^0.6.2",
     "bootstrap": "^4.5.0",
     "chart.js": "^2.9.4",
     "ng2-charts": "^2.4.2",
